Implement similarity search with CLIP and perceptual hashing
- Created SimilarityService with three search methods:
  * find_similar_by_hash: Uses Hamming distance on perceptual hashes
  * find_similar_by_clip: Uses cosine similarity on CLIP embeddings
  * find_similar_hybrid: Combines both methods with deduplication
- Added find_duplicates method to detect potential duplicate artworks
- Added API endpoints:
  * GET /artworks/{id}/similar - Find similar artworks with configurable method
  * GET /artworks/duplicates/detect - Detect duplicate groups
- Added 'Similar Artworks' tab to detail page UI:
  * Dropdown to select similarity method (hybrid/clip/hash)
  * Grid display of similar artworks with similarity scores
  * Visual similarity score bars and method badges
  * Click cards to navigate to similar artwork details
- Tested successfully with 7 artworks showing 62-65% CLIP similarity scores
- Methods support configurable thresholds and result limits

--- a/static/detail.html
+++ b/static/detail.html
@@ -32,6 +32,9 @@
                     <button class="tab-button" data-tab="perceptual">
                         Perceptual Hash Analysis
                     </button>
+                    <button class="tab-button" data-tab="similar">
+                        Similar Artworks
+                    </button>
                 </div>
 
                 <div class="tabs-content">
@@ -125,6 +128,23 @@
                                     <div class="loading-placeholder">Loading...</div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+
+                    <!-- Similar Artworks Tab -->
+                    <div id="similar-tab" class="tab-content">
+                        <div class="similarity-controls">
+                            <label for="similarityMethod">Similarity Method:</label>
+                            <select id="similarityMethod" class="similarity-select">
+                                <option value="hybrid" selected>Hybrid (Hash + CLIP)</option>
+                                <option value="clip">CLIP Semantic Similarity</option>
+                                <option value="hash">Perceptual Hash</option>
+                            </select>
+                            <button id="refreshSimilar" class="btn-secondary">Refresh</button>
+                        </div>
+
+                        <div id="similarResults" class="similar-grid">
+                            <div class="loading-placeholder">Loading similar artworks...</div>
                         </div>
                     </div>
                 </div>
